use Integer.valueOf() instead new Integer(); issue #68; use this.yield() in CBShell instead yield() do avoid keyword confusion